# Registration_Spine_prepost

./: CMakeLists.txt  README.md
Reg_Spine_prepost/: CMakeLists.txt  Reg_Spine_prepost.py
Reg_Spine_prepost/Resources/RegistrationParameters/: ElastixParameterSetDatabase.xml
Reg_Spine_prepost/Resources/UI/: Reg_Spine_prepost.ui  Reg_Spine_prepost_ui.py
